# sample-django-pydantic-field

./: manage.py  pyproject.toml
jsonschema/: asgi.py  settings.py  urls.py  wsgi.py
pets/: admin.py  models.py
pets/migrations/: 0001_initial.py
sample/: admin.py  models.py
sample/migrations/: 0001_initial.py  0002_alter_samplemodel_json.py
sampleproject/: asgi.py  settings.py  urls.py  wsgi.py
