[tool.poetry]
name = "django-jsonschema"
version = "0.1.0"
description = ""
authors = ["Richard <richard@stromer.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
django-pydantic-field = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
